Remove RetryFilter for testing purposes
This PR removes RetryFilter for testing, which will ensure that if an
instance boot is scheduled, but fails, RetryFilter isn't run and so the
error message will provide more information than "No valid host found".

Change-Id: I6ded00d1f6bbb63f4785f84549d6bea6efb26a95

--- a/tests/test-vars.yml
+++ b/tests/test-vars.yml
@@ -117,6 +117,9 @@ nova_service_user_name: nova
 nova_bin: "/openstack/venvs/nova-{{ nova_venv_tag }}/bin"
 nova_venv_tag: "testing"
 nova_virt_type: qemu
+# For the purposes of testing, RetryFilter is removed.
+# This is simply to output more boot failure information during failed tests
+nova_scheduler_default_filters: "AvailabilityZoneFilter,RamFilter,ComputeFilter,ComputeCapabilitiesFilter,ImagePropertiesFilter,ServerGroupAntiAffinityFilter,ServerGroupAffinityFilter,AggregateCoreFilter,AggregateDiskFilter"
 openrc_os_auth_url: "http://127.0.0.1:5000/v3"
 openrc_os_domain_name: "Default"
 openrc_os_password: "{{ keystone_auth_admin_password }}"
