Fix interface configuration for nova gate
The nova gate is failing due to tempest being unable to boot instances.
This is due to the veth peer not being setup correctly, and the
linuxbridge configuration being incorrect.

This PR fixes the veth peer and and the neutron configuration options.

Change-Id: Ia156b8e69f3cbc3806fe4380af38fed15d48b6ed

--- a/tests/host_vars/localhost.yml
+++ b/tests/host_vars/localhost.yml
@@ -15,5 +15,5 @@
 
 neutron_provider_networks:
   network_types: "vxlan,flat"
-  network_mappings: "flat:br-vlan"
+  network_mappings: "flat:eth12"
   network_vxlan_ranges: "1:1000"
