Add nova-placement-api service
This patch adds the Nova Placement API running as uwsgi with Nginx.

Change-Id: I282d25988377d18257b708859f89a7ae4260ac07

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -31,3 +31,15 @@
   when:
     - inventory_hostname in groups[item.value.group]
     - "{{ item.value.condition | default(true) }}"
+
+- name: Restart Nginx
+  service:
+    name: nginx
+    state: restarted
+  register: nova_nginx_restart
+  until: nova_nginx_restart | success
+  retries: 5
+  delay: 2
+  when: inventory_hostname in groups['nova_api_placement']
+  tags:
+    - nova-config
